Correcting background positionning error on IE 6 and IE 7

--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -131,6 +131,7 @@ p {
 	Page Layout
 ----------------------------------------------- */
 #superimage {
+    clear: both;
     position: fixed;
     z-index: -1;
     width: 1680px;
